# microblog

./: .gitignore  app.db  config.py  pyproject.toml
app/: models.py  routes.py
app/templates/: base.html  index.html  login.html
migrations/versions/: a8c576b4946e_posts_table.py  b8842700dcf3_users_table.py
