[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["Michael Farwell <whitewolf9909@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
